--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@iconify/react": "^4.0.1",
 		"@mui/lab": "^5.0.0-alpha.113",
 		"@mui/material": "^5.11.1",
+		"@mui/x-date-pickers": "^5.0.13",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -17,6 +18,7 @@
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
 		"change-case": "^4.1.2",
+		"dayjs": "^1.11.7",
 		"loadash": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
